--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "src/Jyothi_frontend"
   ],
   "dependencies": {
+    "@dfinity/auth-client": "^2.2.0",
+    "@dfinity/principal": "^2.2.0",
     "framer-motion": "^12.0.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "styled-components": "^6.1.14"
   }
